[gd_scene load_steps=3 format=3 uid="uid://bv3py6ft1iu30"]

[ext_resource type="Script" uid="uid://xy57oyri8ecu" path="res://addons/Ds_levels/ui/popups/level_storage_path_set_dialog.gd" id="1_cfqhp"]
[ext_resource type="PackedScene" uid="uid://dvd6im2at4f60" path="res://addons/Ds_levels/ui/file_picker.tscn" id="2_36p0v"]

[node name="level_storage_path_set_dialog" type="VBoxContainer"]
offset_right = 547.0
offset_bottom = 211.0
script = ExtResource("1_cfqhp")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 6
text = "Set Level Storage Path"
horizontal_alignment = 1
vertical_alignment = 1

[node name="file_picker" parent="." instance=ExtResource("2_36p0v")]
unique_name_in_owner = true
layout_mode = 2
start_path = "res://addons/Ds_levels/default_data/level_storage.json"
file_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 82
alignment = 1

[node name="cancel_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="accept_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Accept
"

[connection signal="path_changed" from="file_picker" to="." method="_on_file_picker_path_changed"]
[connection signal="path_selected" from="file_picker" to="." method="_on_file_picker_path_selected"]
[connection signal="pressed" from="HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/accept_button" to="." method="_on_accept_button_pressed"]
